# neuroai-frontend

./: .gitignore  README.md  index.html  pyproject.toml  ruff.toml
assets/css/: base.css
assets/js/: viewer.js
