[tool.poetry]
name = "NeuroAI - Frontend"
version = "0.0.1"
description = "[ ADD STREAMLIT LINK ]"
authors = [
    "Vicente Agüero <vicenteaguero>",
]
readme = "README.md"
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"